--- a/nba/src/main/resources/application.properties
+++ b/nba/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/nba
-spring.datasource.username=root
-spring.datasource.password=root
-
-spring.jpa.hibernate.ddl-auto=update
-
+spring.profiles.active=prod
